--- a/wallabag/Storyboard/Base.lproj/Main.storyboard
+++ b/wallabag/Storyboard/Base.lproj/Main.storyboard
@@ -221,6 +221,11 @@
                                 <segue destination="zBf-ku-xvb" kind="presentation" identifier="menu" id="XgL-Zt-Ctu"/>
                             </connections>
                         </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="3Vd-Vr-Rri">
+                            <connections>
+                                <action selector="addLink:" destination="Ykf-Ei-TaT" id="ZDu-yF-A02"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="s1k-2R-l2H">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
